--- a/wp-content/themes/marchebe/templates/category/_menu.html.twig
+++ b/wp-content/themes/marchebe/templates/category/_menu.html.twig
@@ -5,7 +5,7 @@
                class="p-4 rounded-md shadow-sm flex items-center justify-between transition-colors duration-300"
                :class="isSelected({{ child.cat_ID }}) ? 'bg-cta-dark text-white' : 'bg-white text-black-base'"
                href="#"
-               @click="selectCategory({{ child.cat_ID }},'{{ child.name }}')">
+               @click="selectCategory({{ child.cat_ID }},'{{ child.slug }}')">
                 <span class="mr-2">{{ child.name }}</span>
                 <button aria-label="More options for {{ child.name }}"
                         class="hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 rounded"
