--- a/wp-content/themes/marchebe/templates/bottin/_address.html.twig
+++ b/wp-content/themes/marchebe/templates/bottin/_address.html.twig
@@ -1,39 +1,27 @@
-<script>
-const googleMapsUrl = () => {
-  if (fiche.latitude && fiche.longitude) {
-    return `https://www.google.com/maps/search/?api=1&query=${fiche.latitude},${fiche.longitude}`;
-  }
-  // Fallback to searching by address if lat/lon are missing
-  const address = "{{ fiche.rue }} {{ fiche.numero }}, {{ fiche.cp }} {{ fiche.localite }}";
-  return `https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(address)}`;
-};
-</script>
-<template>
-  <div class="flex items-start group">
+<div class="flex items-start group">
     <h3>Adresse</h3>
     <div class="flex-shrink-0 w-6 h-6 mt-1">
-      <svg class="w-6 h-6 text-gray-400 dark:text-gray-500 group-hover:text-teal-500 transition-colors duration-200"
-           fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path>
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-              d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
-      </svg>
+        <svg class="w-6 h-6 text-gray-400 dark:text-gray-500 group-hover:text-teal-500 transition-colors duration-200"
+             fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path>
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
+        </svg>
     </div>
     <div class="ml-4">
-      <p class="text-gray-700 dark:text-gray-300">
-        {{ fiche.rue }} {{ fiche.numero }}<br/>
-        {{ fiche.cp }} {{ fiche.localite }}
-      </p>
+        <p class="text-gray-700 dark:text-gray-300">
+            {{ fiche.rue }} {{ fiche.numero }}<br/>
+            {{ fiche.cp }} {{ fiche.localite }}
+        </p>
 
-      <a
-          href="javascript:googleMapsUrl"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="text-sm text-teal-600 dark:text-teal-400 hover:text-teal-500 font-medium transition-colors duration-200"
-      >
-        View on Map →
-      </a>
+        <a
+                href="{{ ficheUrlMap(fiche) }}"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="text-sm text-teal-600 dark:text-teal-400 hover:text-teal-500 font-medium transition-colors duration-200"
+        >
+            View on Map →
+        </a>
     </div>
-  </div>
-</template>
+</div>
