--- a/wp-content/themes/marchebe/templates/bottin/_contact.html.twig
+++ b/wp-content/themes/marchebe/templates/bottin/_contact.html.twig
@@ -8,43 +8,50 @@
     {% endif %}
 
     <!-- Phone -->
-    {% for phone in fiche|fichePhones() %}
-        <div
-                class="flex items-center group">
-            <div class="flex-shrink-0 w-6 h-6">
-                <svg class="w-6 h-6 text-gray-400 dark:text-gray-500 group-hover:text-teal-500 transition-colors duration-200"
-                     fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
-                </svg>
+    {% set phones = fichePhones(fiche) %}
+    {% if phones|length > 0 %}
+        {% for phone in phones %}
+            <div
+                    class="flex items-center group">
+                <div class="flex-shrink-0 w-6 h-6">
+                    <svg class="w-6 h-6 text-gray-400 dark:text-gray-500 group-hover:text-teal-500 transition-colors duration-200"
+                         fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                              d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
+                    </svg>
+                </div>
+                <div class="ml-4">
+                    <a href="tel:{{ phone }}"
+                       class="text-gray-700 dark:text-gray-300 hover:text-teal-600 dark:hover:text-teal-400 transition-colors duration-200">
+                        {{ phone }}
+                    </a>
+                </div>
             </div>
-            <div class="ml-4">
-                <a href="tel:{{ phone }}"
-                   class="text-gray-700 dark:text-gray-300 hover:text-teal-600 dark:hover:text-teal-400 transition-colors duration-200">
-                    {{ phone }}
-                </a>
-            </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
+    {% endif %}
 
     <!-- email -->
-    {% for email in fiche|ficheEmails() %}
-        <div class="flex items-center group">
-            <div class="flex-shrink-0 w-6 h-6">
-                <svg class="w-6 h-6 text-gray-400 dark:text-gray-500 group-hover:text-teal-500 transition-colors duration-200"
-                     fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
-                </svg>
+    {% set emails = ficheEmails(fiche) %}
+    {% if emails|length > 0 %}
+
+        {% for email in emails %}
+            <div class="flex items-center group">
+                <div class="flex-shrink-0 w-6 h-6">
+                    <svg class="w-6 h-6 text-gray-400 dark:text-gray-500 group-hover:text-teal-500 transition-colors duration-200"
+                         fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                              d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
+                    </svg>
+                </div>
+                <div class="ml-4">
+                    <a href="mailto:{{ email }}"
+                       class="text-gray-700 dark:text-gray-300 hover:text-teal-600 dark:hover:text-teal-400 transition-colors duration-200">
+                        {{ email }}
+                    </a>
+                </div>
             </div>
-            <div class="ml-4">
-                <a href="mailto:{{ email }}"
-                   class="text-gray-700 dark:text-gray-300 hover:text-teal-600 dark:hover:text-teal-400 transition-colors duration-200">
-                    {{ email }}
-                </a>
-            </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
+    {% endif %}
 
     <!-- Website -->
     {% if fiche.website %}
