--- a/wp-content/themes/marchebe/templates/homepage.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage.html.twig
@@ -1,4 +1,4 @@
-<main>
+<main id="homepage">
     {% include '@AcMarche/home/_hero.html.twig' %}
     {% include '@AcMarche/home/_shortcuts.html.twig' %}
     <section class="py-6 md:py-16 px-6 container mx-auto">
