--- a/wp-content/themes/marchebe/templates/widgets/_breadcrumbs.html.twig
+++ b/wp-content/themes/marchebe/templates/widgets/_breadcrumbs.html.twig
@@ -1,5 +1,5 @@
 <!-- https://tailwindui.com/components/application-ui/navigation/breadcrumbs -->
-<nav aria-label="Breadcrumb" class="">
+<nav aria-label="Breadcrumb" class="my-2">
     <ol class="flex items-center space-x-2 text-slate-500">
         <li>
             <a href="/" class="hover:text-blue-600 hover:underline">Accueil</a>
