--- a/wp-content/themes/marchebe/templates/category/_posts.html.twig
+++ b/wp-content/themes/marchebe/templates/category/_posts.html.twig
@@ -12,17 +12,7 @@
         <!-- Posts Grid -->
         <div x-show="!loading" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-8 ml-0 md:ml-4">
             <template x-for="post in filteredPosts" :key="post.id">
-                <article
-                        class="group bg-white p-2 rounded-xl shadow-sm hover:shadow-xl hover:-translate-y-2 transition-all duration-300 ease-in-out animated-element">
-                    <h2 class="text-lg font-bold group-hover:text-citoyen">
-                        <a :href="post.link" x-text="post.name"></a>
-                    </h2>
-                    <div class="mt-2  line-clamp-3" x-html="post.excerpt" x-show="post.excerpt"></div>
-                    <a :href="post.link"
-                       class="inline-block font-semibold text-primary mt-6 group-hover:underline group-hover:text-citoyen">
-                        En savoir plus →
-                    </a>
-                </article>
+                {% include '@AcMarche/category/_post_inline.html.twig' %}
             </template>
             <div x-show="!loading && filteredPosts.length === 0" class="text-center col-span-full">
                 Aucun article pour le moment.
