--- a/wp-content/themes/marchebe/templates/homepage/_shortcuts.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage/_shortcuts.html.twig
@@ -8,7 +8,7 @@
                             href="{{ shortcut.url }}"
                             class="group bg-white p-3 md:p-4 rounded-xl shadow-md border border-slate-100 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 flex flex-col items-center text-center">
                         <div
-                                class="rounded-full {{ shortcut.bgcolorhover }} group-hover:text-white transition-colors flex items-center justify-center w-14 h-14 md:w-18 md:h-18 mb-2">
+                                class="rounded-full group-hover:bg-cta-dark group-hover:text-white transition-colors flex items-center justify-center w-14 h-14 md:w-18 md:h-18 mb-2">
                             <i class="{{ shortcut.icon }} text-slate-700 text-2xl md:text-4xl transition-transform group-hover:text-white group-hover:scale-110"></i>
                         </div>
                         <h2 class="font-semibold text-sm text-slate-700 md:text-lg leading-tight">{{ shortcut.name }}</h2>
