--- a/wp-content/themes/marchebe/templates/homepage/_shortcuts.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage/_shortcuts.html.twig
@@ -2,11 +2,11 @@
     <div class="container mx-auto px-4 md:px-6 -mt-8 relative z-20">
         <ul class="grid grid-cols-3 lg:grid-cols-[repeat(3,minmax(0,300px))] gap-3 lg:gap-5 justify-center align-center" id="shortcuts">
             {% for shortcut in shortcuts %}
-                <li>
+                <li class="h-full">
                     <a
                             title="{{ shortcut.description }}"
                             href="{{ shortcut.url }}"
-                            class="group bg-white p-3 md:p-4 rounded-xl shadow-md border border-slate-100 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 flex flex-col items-center text-center">
+                            class="h-full group bg-white p-3 md:p-4 rounded-xl shadow-md border border-slate-100 hover:shadow-xl hover:-translate-y-1 transition-all duration-300 flex flex-col items-center text-center">
                         <div
                                 class="rounded-full group-hover:bg-cta-dark group-hover:text-white transition-colors flex items-center justify-center w-14 h-14 md:w-18 md:h-18 mb-2">
                             <i class="{{ shortcut.icon }} text-slate-700 text-2xl md:text-4xl transition-transform group-hover:text-white group-hover:scale-110"></i>
